--- a/src/components/layout/LinkButton.module.css
+++ b/src/components/layout/LinkButton.module.css
@@ -1,10 +1,11 @@
-.btn{
-    background-color: #222;
-    color: #fff;
-    padding: 0.5em 1em;
+.butonsStyles {
+    color: white;
+    background-color: black;
     text-decoration: none;
-    transition:  0.5s;   
+    transition: 0.5s;
+    padding: 0.5em 1em;
 }
-.btn:hover{
+
+.butonsStyles:hover {
     color: #ffbb33;
 }
