--- a/src/components/layout/Navbar.module.css
+++ b/src/components/layout/Navbar.module.css
@@ -2,15 +2,21 @@ body {
     margin: 0;
     padding: 0;
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     min-height: 100vh;
 }
-
+ 
 .navbar {
-    display: flex;
     justify-content: space-between;
     background-color: black;
+    color: #fff;
     padding: 1em;
+    text-align: center;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+
 }
 
 .list {
